<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="search">Поиск</string>
    <string name="refresh">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_search_history">Очистить историю</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="black_theme">Темная тема</string>
    <string name="share_application">Поделиться приложением</string>
    <string name="add_to_playlist" translatable="false">Добавить в плейлист</string>
    <string name="add_to_favourites" translatable="false">Добавить в избранные</string>
    <string name="button_play_track" translatable="false">Кнопка включить трек</string>
    <string name="button_pause_track" translatable="false">Кнопка поставить трек на паузу</string>
    <string name="track_progress_0" translatable="false">00:00</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="hide_placeholders" translatable="false">Скрыть плейсхолдеры</string>
    <string name="icon_back" translatable="false">Иконка назад</string>
    <string name="icon_share" translatable="false">Иконка поделиться</string>
    <string name="icon_more" translatable="false">Иконка подробнее</string>
    <string name="icon_support" translatable="false">Иконка поддержка</string>
    <string name="icon_clear" translatable="false">Иконка очистить</string>
    <string name="icon_search" translatable="false">Иконка Поиска</string>
    <string name="icon_ellipse" translatable="false">Иконка точка</string>
    <string name="icon_nothing_found" translatable="false">Иконка ничего не найдено</string>
    <string name="icon_no_internet" translatable="false">Иконка нет интернета</string>
    <string name="icon_arrow_forward" translatable="false">Иконка стрелка вперед</string>
    <string name="link_Yandex_AndroidDeveloper" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="write_support_message" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="write_support_subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="my_email" translatable="false">d.kharakshinov@mail.ru</string>
    <string name="yandex_offer" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="image_album" translatable="false">Картинка альбома трека</string>
    <string name="image_playlist" translatable="false">Картинка альбома плейлиста</string>
    <string name="track_time">Длительность</string>
    <string name="track" translatable="false">трек</string>
    <string name="track_a" translatable="false">трека</string>
    <string name="track_ov" translatable="false">треков</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="empty_medialibrary">Ваша медиатека пуста</string>
    <string name="no_playlist">Вы не создали\n ни одного плейлиста</string>
    <string name="favourite_tracks">Избранные треки</string>
    <string name="no_tracks">Нет треков</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlist_photo" translatable="false">Фото плейлиста</string>
    <string name="playlist_photo_template" translatable="false">Шаблон для фото плейлиста</string>
    <string name="finish_creating_playlist">Завершить создание плейлиста?</string>
    <string name="all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="finish">Завершить</string>
    <string name="cancel">Отмена</string>
    <string name="photo_picker" translatable="false">PhotoPicker</string>
    <string name="no_media_selected" translatable="false">No media selected</string>
    <string name="myalbum" translatable="false">myalbum</string>
    <string name="need_permission">Для загрузки фото требуется разрешение</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="track_is_present_in_playlist">Трек уже присутствует в выбранном плейлисте</string>
    <string name="track_successfully_added_to_playlist">Трек успешно добавлен в плейлист</string>
    <string name="shure_to_delete_playlist">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete">Удалить</string>
    <string name="delete_track">Удалить трек</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="no_tracks_in_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share">Поделиться</string>
    <string name="change_info">Редактировать информацию</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
</resources>