<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker.Settings"
    tools:context="com.practicum.playlistmaker.settings.presentation.SettingsFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:orientation="horizontal">

        <TextView
            android:text="@string/settings"
            style="@style/TopLeftText" />

    </FrameLayout>

    <Switch
        android:id="@+id/buttonThemeSwitcher"
        android:layout_marginTop="@dimen/margin_61"
        android:text="@string/black_theme"
        style="@style/Switch" />

    <Button
        android:id="@+id/button_share_application"
        android:text="@string/share"
        app:icon="@drawable/icon_share"
        style="@style/ButtonSettings" />

    <Button
        android:id="@+id/button_write_support"
        android:text="@string/write_support"
        app:icon="@drawable/icon_support"
        style="@style/ButtonSettings"/>

    <Button
        android:id="@+id/button_user_agreement"
        android:text="@string/user_agreement"
        app:icon="@drawable/icon_arrow_forward"
        style="@style/ButtonSettings"/>

</LinearLayout>