<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker.MainMenu"
    tools:context="com.practicum.playlistmaker.mainscreen.presentation.MainScreenFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/standard_indent_16"
        android:paddingTop="@dimen/margin_14"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="500"
        android:textSize="@dimen/text_22" />

    <Button
        android:id="@+id/button_search"
        android:layout_marginTop="@dimen/margin_40"
        android:text="@string/search"
        app:icon="@drawable/icon_search"
        style="@style/ButtonMainMenu" />

    <Button
        android:id="@+id/button_media_library"
        android:text="@string/media_library"
        app:icon="@drawable/icon_media_library"
        style="@style/ButtonMainMenu" />

    <Button
        android:id="@+id/button_settings"
        android:layout_marginBottom="@dimen/margin_28"
        android:text="@string/settings"
        app:icon="@drawable/icon_settings"
        style="@style/ButtonMainMenu" />

</LinearLayout>