<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_settings">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/icon_back"
            android:id="@+id/button_go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_arrow_back"
            app:iconTint="@color/yp_black"
            app:iconGravity="textStart"
            android:layout_marginTop="@dimen/margin_20"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_28"
            android:layout_marginTop="@dimen/margin_14"
            android:text="@string/settings"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/main_menu_text_22" />

    </FrameLayout>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_indent_16"
        android:layout_marginEnd="@dimen/margin_5"
        android:layout_marginTop="@dimen/margin_61"
        android:text="@string/black_theme"
        android:textSize="@dimen/settings_text_16"
        android:textColor="@color/black"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/standard_indent_16"
        android:paddingEnd="@dimen/standard_indent_16"
        android:paddingTop="@dimen/margin_42"
        android:backgroundTint="@color/background_settings"
        android:stateListAnimator="@null"

        android:text="@string/share"
        android:gravity="start"
        android:textColor="@color/black"
        android:fontFamily="Arial"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textAllCaps="false"
        android:textSize="@dimen/settings_text_16"

        app:icon="@drawable/icon_share"
        app:iconGravity="end"
        app:iconTint="@color/grey" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/standard_indent_16"
        android:paddingEnd="@dimen/standard_indent_16"
        android:paddingTop="@dimen/margin_42"
        android:backgroundTint="@color/background_settings"
        android:stateListAnimator="@null"

        android:text="@string/write_support"
        android:gravity="start"
        android:textColor="@color/black"
        android:fontFamily="Arial"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textAllCaps="false"
        android:textSize="@dimen/settings_text_16"

        app:icon="@drawable/icon_support"
        app:iconGravity="end"
        app:iconTint="@color/grey" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/standard_indent_16"
        android:paddingEnd="@dimen/standard_indent_16"
        android:paddingTop="@dimen/margin_42"
        android:backgroundTint="@color/background_settings"
        android:stateListAnimator="@null"

        android:text="@string/user_agreement"
        android:gravity="start"
        android:textColor="@color/black"
        android:fontFamily="Arial"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textAllCaps="false"
        android:textSize="@dimen/settings_text_16"

        app:icon="@drawable/icon_arrow_forward"
        app:iconGravity="end"
        app:iconTint="@color/grey" />

</LinearLayout>