<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/icon_back"
            android:id="@+id/button_go_back"
            style="@style/IconGoBack"/>

        <TextView
            android:text="@string/search"
            style="@style/TopLeftText"/>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/inputEditText"
            android:layout_width="@dimen/margin_0"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            android:maxLength="50"
            android:maxLines="1"
            android:inputType="text"
            android:textColor="?attr/colorOnSecondary"
            android:textColorHint="?attr/colorOnSecondary" />

        <ImageView
            android:id="@+id/clearIcon"
            android:contentDescription="@string/icon_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>