<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.PlaylistMaker.NewPlaylist"
    tools:context="com.practicum.playlistmaker.presentation.medialibrary.playlists.newplaylist.NewPlaylistFragment">

    <ImageView
        android:id="@+id/button_go_back"
        android:contentDescription="@string/icon_back"
        style="@style/IconGoBack"
        android:layout_margin="@dimen/dp_16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:text="@string/new_playlist"
        style="@style/TopLeftText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_go_back"
        android:layout_marginStart="@dimen/dp_24"/>

    <ImageView
        android:id="@+id/playlist_photo_template"
        android:contentDescription="@string/playlist_photo_template"
        android:layout_height="@dimen/dp_312"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/button_go_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:layout_marginTop="@dimen/margin_42"
        android:src="@drawable/new_playlist_template"
        />

    <EditText
        android:id="@+id/playlist_name"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@id/playlist_photo_template"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:padding="8dp"
        android:layout_gravity="center"
        android:textSize="@dimen/text_16"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="?attr/text_color"
        android:textColorHint="?attr/text_color"
        android:textFontWeight="400"
        android:hint="@string/playlist_name"
        android:background="@drawable/rounded_rectangle_edittext_selector"/>

    <TextView
        android:id="@+id/name_active_text"
        android:layout_width="@dimen/dp_61"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/playlist_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/dp_32"
        android:layout_marginBottom="@dimen/dp_48"
        android:textSize="@dimen/text_12"
        android:gravity="center"
        android:textColor="@color/blue_3772E7"
        android:fontFamily="@font/ys_display_regular"
        android:textFontWeight="500"
        android:text="@string/playlist_name"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/playlist_description"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@id/playlist_name"
        android:layout_margin="@dimen/dp_16"
        android:padding="8dp"
        android:layout_gravity="center"
        android:textSize="@dimen/text_16"
        android:textColor="?attr/text_color"
        android:textColorHint="?attr/text_color"
        android:fontFamily="@font/ys_display_regular"
        android:textFontWeight="400"
        android:hint="@string/playlist_description"
        android:background="@drawable/rounded_rectangle_edittext_selector"/>

    <TextView
        android:id="@+id/description_active_text"
        android:layout_width="@dimen/dp_60"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/playlist_description"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/dp_32"
        android:layout_marginBottom="@dimen/dp_48"
        android:textSize="@dimen/text_12"
        android:gravity="center"
        android:textColor="@color/blue_3772E7"
        android:fontFamily="@font/ys_display_regular"
        android:textFontWeight="500"
        android:text="@string/playlist_description"
        android:visibility="gone" />

    <TextView
        android:id="@+id/button_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/dp_17"
        android:layout_marginBottom="@dimen/dp_32"
        android:textSize="@dimen/text_16"
        android:textColor="@color/white"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="500"
        android:background="@drawable/button_make_playlist_selector"
        android:text="@string/create"
        android:enabled="false"/>



</androidx.constraintlayout.widget.ConstraintLayout>