<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.PlaylistMaker.MediaLibrary">

    <Button
        android:id="@+id/button_new_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/new_playlist"
        android:textColor="?attr/text_color_white_black"
        android:stateListAnimator="@null"
        android:backgroundTint="?attr/text_color"
        android:textAllCaps="false"
        android:textSize="@dimen/text_14"
        android:fontFamily="@font/ys_display_medium"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textFontWeight="500"
        app:cornerRadius="@dimen/dp_54" />

    <ImageView
        android:id="@+id/icon_nothing_found"
        android:contentDescription="@string/icon_nothing_found"
        app:layout_constraintTop_toBottomOf="@id/button_new_playlist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_50"
        style="@style/IconNothingFound"/>

    <TextView
        android:id="@+id/placeholderMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:textSize="@dimen/text_19"
        android:textColor="?attr/text_color"
        android:text="@string/no_playlist"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/icon_nothing_found"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPlaylists"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="85dp"
        android:layout_marginHorizontal="@dimen/dp_16"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>