<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_61"
    >

    <ImageView
        android:id="@+id/photoImageView"
        android:contentDescription="@string/image_album"
        android:layout_width="@dimen/dp_45"
        android:layout_height="@dimen/dp_45"
        android:layout_marginStart="@dimen/dp_13"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        tools:src="@drawable/icon_no_reply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/track_name_TextView"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_16"
        android:textColor="?attr/text_color"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_6"
        android:lines="1"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_regular"
        app:layout_constraintTop_toTopOf="@id/photoImageView"
        app:layout_constraintStart_toEndOf="@id/photoImageView"
        app:layout_constraintEnd_toStartOf="@id/icon_forward"
        />

    <TextView
        android:id="@+id/author_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_11"
        android:textColor="?attr/color_grey_white"
        android:layout_marginTop="@dimen/dp_1"
        android:lines="1"
        android:maxWidth="@dimen/dp_150"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_regular"
        app:layout_constraintTop_toBottomOf="@id/track_name_TextView"
        app:layout_constraintStart_toStartOf="@id/track_name_TextView"
        app:layout_constraintEnd_toStartOf="@id/icon_ellipse"
        />

    <ImageView
        android:id="@+id/icon_ellipse"
        android:contentDescription="@string/icon_ellipse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_6"
        tools:src="@drawable/icon_ellipse"
        app:tint="?attr/color_grey_white"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toBottomOf="@id/track_name_TextView"
        app:layout_constraintStart_toEndOf="@id/author_name"
        app:layout_constraintEnd_toStartOf="@id/track_length"
        />

    <TextView
        android:id="@+id/track_length"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_11"
        android:textColor="?attr/color_grey_white"
        android:layout_marginTop="@dimen/dp_1"
        android:lines="1"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_regular"
        app:layout_constraintTop_toBottomOf="@id/track_name_TextView"
        app:layout_constraintStart_toEndOf="@id/icon_ellipse"
        app:layout_constraintEnd_toStartOf="@id/icon_forward"
        />
    
    
    <ImageView
        android:id="@+id/icon_forward"
        android:contentDescription="@string/icon_arrow_forward"
        android:layout_width="@dimen/dp_8"
        android:layout_height="@dimen/dp_14"
        tools:src="@drawable/icon_arrow_forward"
        app:tint="?attr/color_grey_white"
        android:layout_marginEnd="@dimen/standard_indent_16"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    
</androidx.constraintlayout.widget.ConstraintLayout>